--- a/.github/workflows/control-instance.yml
+++ b/.github/workflows/control-instance.yml
@@ -29,6 +29,7 @@ jobs:
           reaction: "rocket"
           allowed_contexts: "issue"
           permissions: "read,triage,write,maintain,admin"
+          allowlist: "jcfr,muratmaga,${{ github.event.issue.user.login }}"
 
       - name: stop command
         id: stop_command
@@ -38,6 +39,7 @@ jobs:
           reaction: "rocket"
           allowed_contexts: "issue"
           permissions: "read,triage,write,maintain,admin"
+          allowlist: "jcfr,muratmaga,${{ github.event.issue.user.login }}"
 
       - name: Define instance name
         id: define
