--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -278,17 +278,20 @@ jobs:
           proxified_instance_ip=${INSTANCE_IP//./-}
 
           # See "stepServerGuacamoleAuth" in exosphere/src/Orchestration/GoalServer.elm
-          tokens_url="https://http-$proxified_instance_ip-$guacamole_port.$proxy_hostname/guacamole/api/tokens"
-          auth_token=$(
-            curl -X POST --silent -d "username=exouser&password=$INSTANCE_PWD" $tokens_url | \
-            jq -r .authToken
-          )
-          echo "::add-mask::$auth_token"
+          # tokens_url="https://http-$proxified_instance_ip-$guacamole_port.$proxy_hostname/guacamole/api/tokens"
+          # auth_token=$(
+          #   curl -X POST --silent -d "username=exouser&password=$INSTANCE_PWD" $tokens_url | \
+          #   jq -r .authToken
+          # )
+          # echo "::add-mask::$auth_token"
+          #
+          # Since the token expires after a few hours, remove "?token=$auth_token" from "connection_url" and require
+          # the user to explicitly authenticate specifying the username and passphrase.
 
           # See hard-coded value in exosphere/src/Helpers/Interaction.elm
           client_id=ZGVza3RvcABjAGRlZmF1bHQ
 
-          connection_url="https://http-$proxified_instance_ip-$guacamole_port.$proxy_hostname/guacamole/#/client/$client_id=?token=$auth_token"
+          connection_url="https://http-$proxified_instance_ip-$guacamole_port.$proxy_hostname/guacamole/#/client/$client_id="
           echo $connection_url
           echo "connection_url=$connection_url" >> $GITHUB_OUTPUT
 
