--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -1,25 +1,25 @@
 name: Create Instance
 
 on:
-  issues:
-    types: [labeled]
+  issue_comment:
+    types: [created]
 
 jobs:
   create:
     runs-on: self-hosted
-    if: github.event.label.name == 'instance:approved'
+    if:
+      ${{ !github.event.issue.pull_request && (
+      contains(github.event.comment.body, '/create') ) }}
     steps:
-      - name: Remove "instance:approved" label
-        if: ${{ always() }}
-        uses: actions/github-script@v7
+      - name: create command
+        id: create_command
+        uses: github/command@v1.2.0
         with:
-          script: |
-            github.rest.issues.removeLabel({
-              issue_number: context.payload.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              name: ["instance:approved"]
-            })
+          command: "/create"
+          reaction: "rocket"
+          allowed_contexts: "issue"
+          permissions: "write,maintain,admin"
+          allowlist: "jcfr,muratmaga"
 
       - name: Find Progress Comment
         uses: peter-evans/find-comment@v3
