--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -369,7 +369,16 @@ jobs:
           echo Retrieving instance "$INSTANCE_NAME" metadata
 
           # Get instance IP
-          echo "instance_ip=$FLOATING_IP_ADDRESS" >> $GITHUB_OUTPUT
+          instance_ip=$(
+            openstack server show $INSTANCE_NAME -c addresses -f json | \
+            jq -r '.addresses.auto_allocated_network[1]'
+          )
+          echo "instance_ip [$instance_ip]"
+          if [[ "$instance_ip" == "null" ]]; then
+            echo "::error ::Failed to retrieve $INSTANCE_NAME IP"
+            exit 1
+          fi
+          echo "instance_ip=$instance_ip" >> $GITHUB_OUTPUT
 
           # Get instance password
           instance_pwd=$(
@@ -383,15 +392,13 @@ jobs:
               -o StrictHostKeyChecking=no \
               -o UserKnownHostsFile=/dev/null \
               -o LogLevel=ERROR \
-              exouser@$FLOATING_IP_ADDRESS \
+              exouser@$instance_ip \
               'curl --silent http://169.254.169.254/openstack/latest/password')
           fi
           echo "::add-mask::$instance_pwd"
           echo "instance_pwd=$instance_pwd" >> $GITHUB_OUTPUT
         env:
           INSTANCE_NAME: ${{ steps.define.outputs.instance_name }}
-          FLOATING_IP_ADDRESS:
-            ${{ steps.ip_create.outputs.floating_ip_address }}
 
       - name: comment (failed to retrieve instance metadata)
         if: ${{ steps.instance_metadata.outcome == 'failure' && failure() }}
